--- a/package.json
+++ b/package.json
@@ -5,19 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
-    "@pdftron/webviewer": "^8.1.0",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "leaflet": "^1.7.1",
     "uid": "^2.0.0",
     "vue": "^3.0.0",
-    "vue-pdf": "^4.3.0",
-    "vue-pdf-embed": "^1.0.5",
-    "vue-router": "^4.0.0-0",
-    "vue3-pdf": "^4.2.6"
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
